# modelart-cli

./: .gitignore  AGENT.md  CLAUDE.md  README.md  SKILL.md  pyproject.toml
docs/: incident-2026-04-23.md  incident-job-cc19-copy-904a.md
scripts/: check_jobs.py  container_watchdog.py  startup.sh
src/macli/: __main__.py  auth.py  config.py  constants.py  helpers.py  log.py  mail_alert.py  net.py  platform_daemon.py  session.py  websocket.py
src/macli/commands/: alert_email.py  autologin.py  detail.py  exec_.py  identityfile.py  jobs.py  log_cmd.py  login.py  ops.py  region.py  server.py  shell.py  ssh.py  usage.py  watch.py
tests/: test_server_context.py
